# gotopub-rs

./: Cargo.toml  README.md
src/: lib.rs
src/meta/: mod.rs
